--- a/WebContent/login.css
+++ b/WebContent/login.css
@@ -61,6 +61,11 @@ body{
 
 }
 
+.tablestyle1{
+	border-collapse: collapse;
+	background-color:#c2e0e2;
+}
+
 
 .tablestyle{
 	border-collapse: collapse;
@@ -77,7 +82,6 @@ body{
 .employeetable th, .employeetable td{
 	border: 1px #808080 solid;
 }
-
 
 input[type="submit"] {
    display: inline-block;
@@ -97,6 +101,28 @@ input[type="submit"] {
 	background-image: -webkit-linear-gradient(45deg, #709dff 50%, #b0c9ff 100%);
     background-image: linear-gradient(45deg, #709dff 50%, #b0c9ff 100%);
 }
+
+
+
+#search input[type="submit"]{
+   display: inline-block;
+    padding: 0em 1em;
+    text-decoration: none;
+    border-radius: 3px;
+    font-weight: bold;
+    color: #FFF;
+    background-image: -webkit-linear-gradient(45deg, #709dff 0%, #b0c9ff 100%);
+    background-image: linear-gradient(45deg, #709dff 0%, #b0c9ff 100%);
+    transition: .4s;
+    margin: 0.5em 0 0;
+
+}
+
+#search input[type="submit"]{
+	background-image: -webkit-linear-gradient(45deg, #709dff 50%, #b0c9ff 100%);
+    background-image: linear-gradient(45deg, #709dff 50%, #b0c9ff 100%);
+}
+
 
 
 footer{
